--- a/style.css
+++ b/style.css
@@ -5,13 +5,39 @@
   margin-left: 38px;
   margin-bottom: 15px;
 }
+.table{
+    border: 1px solid black;
+}
+.td {
+    padding: 2px;
+  }
+
+.container {
+    margin-top:10px;
+    font-family:arial;
+}
+input:focus {
+    //change more attributes, if you want.
+}
+/*
+input {
+    border:none;
+    background-color:transparent;
+} */
+.container header {
+    padding-bottom:20px;
+    border-bottom:1px solid black;
+}
+ul, input, .container {
+    padding:10px;
+}
 
 img.portrait {
   background-image: url(../images/frame.jpg);
   background-repeat: no-repeat;
-  width: 200px;
-  height: 200px;
-  padding-top: 20px;
+  width: 210px;
+  height: 210px;
+  padding-top: 60px;
   padding-left: 11px;
   padding-right: 11px;
   padding-bottom: 36px;
@@ -61,8 +87,8 @@ h3 {
 }
 
 li img {
-  width: 80px;
-  height: 80px;
+  width: 100px;
+  height: 100px;
   float: left;
   margin: 0 15px 0 0;
 }
@@ -143,8 +169,8 @@ li:hover {
 
 .tags a {
   display: inline-block;
-  height: 24px;
-  line-height: 23px;
+  height: 30px;
+  line-height: 0px;
   position: relative;
   margin: 0 12px 8px 0;
   padding: 0 12px 0 10px;
